provarAnt/00D180000008cIAEAY/objects/SLX__Change_Control__c.object
<CustomObject>
    <description>Administrative Object to allow the tracking and approval of system changes</description>
    <fields>
        <fullName>Add_l_Info__c</fullName>
        <inlineHelpText>type in add&apos;l info</inlineHelpText>
        <label>Add&apos;l Info</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Change_Control_Request__c</fullName>
        <displayFormat>{00000000}</displayFormat>
        <label>Change Control Request #</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Final_Comment__c</fullName>
        <label>Final Comment</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Link_to_Record__c</fullName>
        <inlineHelpText>Please paste the URL to the record you are having an issue with. If this issue/request is not related to a Salesforce record, simply type in N/A</inlineHelpText>
        <label>Link to Record</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>On_My_Team__c</fullName>
        <formula>IF (CreatedById = $User.Id, 1, 0)</formula>
        <label>On My Team</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Request</label>
        <referenceTo>SLX__Change_Control__c</referenceTo>
        <relationshipLabel>Parent Requests</relationshipLabel>
        <relationshipName>Changes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>5-Cold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4-Lukewarm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3-Warm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2-Hot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-ON FIRE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Related_Tab__c</fullName>
        <label>Related Tab</label>
        <picklist>
            <picklistValues>
                <fullName>Accounts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Activities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATG Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BU Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cases</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Changes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chatter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contacts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Content</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dashboards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Events</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>POA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reports</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requests</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SWOT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>User</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reports_to_Email__c</fullName>
        <formula>SLX__Requestor__r.Manager.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reports to Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Age__c</fullName>
        <formula>IF( ISPICKVAL( SLX__Request_Status__c , &quot;Completed&quot;) , NULL, Today()- DATEVALUE( CreatedDate ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Request Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <label>Request Type</label>
        <picklist>
            <picklistValues>
                <fullName>Account Team Assignment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broken Functionality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feature Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General User Question</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary &amp; Secondary Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Status or BU Spend Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Report or View Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Reassignment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Status</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salesforce Questions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dashboard/Report Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing BU Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salesforce1 App</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pilot/Test Questions</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Requestor_Role__c</fullName>
        <formula>$UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requestor Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requestor_s_Email__c</fullName>
        <formula>SLX__Requestor__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requestor&apos;s Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLX__Date_Completed__c</fullName>
        <description>Date work was actually completed</description>
        <label>Date Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLX__Date_Requested__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>Date work is to be completed by</description>
        <label>Date Requested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLX__Days_Outstanding__c</fullName>
        <formula>IF( ISPICKVAL( SLX__Request_Status__c , &quot;Completed&quot;) ,  SLX__Date_Completed__c - SLX__Date_Requested__c , TODAY() -  SLX__Date_Requested__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days: Outstanding</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLX__Days_Processed__c</fullName>
        <formula>SLX__Date_Completed__c -  SLX__Date_Requested__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days: Processed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLX__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SLX__Request_Status__c</fullName>
        <label>Request Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting Third Party</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Future</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need More Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Not Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent to Service Now</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted for Approval</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SLX__Requestor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requestor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N40000001Hw99EAC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SLX__Results__c</fullName>
        <label>Issues/Results/Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SNOW__c</fullName>
        <formula>HYPERLINK(&quot;https://autotradergroup.service-now.com/ess/&quot;, &quot;Create SNOW Request&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SNOW</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Reason__c</fullName>
        <description>Field Dependent upon values selected in Request Type Field</description>
        <label>Sub Reason</label>
        <picklist>
            <controllingField>Request_Type__c</controllingField>
            <picklistValues>
                <fullName>Territory Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Realignment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transfer to DSC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Hire Assignment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Previous Rep No Longer with ATC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Requested Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rep on Leave of Absence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assignment for Prospect Accounts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OOB Dealer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Dealer Request Status</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secondary Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Merge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neglected (Dropdown menu)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pipeline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Person Visits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing AC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KBB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>V-Auto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TIM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Homenet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VIN Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Login</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Functionality issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Time_to_Close__c</fullName>
        <formula>ABS(SLX__Date_Requested__c  -  SLX__Date_Completed__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time to Close</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>What_is_your_Request__c</fullName>
        <inlineHelpText>enter a brief description of your request, add details of request into addl info field</inlineHelpText>
        <label>What is your Request?</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <label>Change Control</label>
    <listViews>
        <fullName>Account_Transfers</fullName>
        <columns>SLX__Date_Requested__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>NAME</columns>
        <columns>SLX__Description__c</columns>
        <columns>SLX__Request_Status__c</columns>
        <columns>SLX__Days_Outstanding__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Request_Type__c</field>
            <operation>equals</operation>
            <value>Account Reassignment</value>
        </filters>
        <filters>
            <field>SLX__Request_Status__c</field>
            <operation>equals</operation>
            <value>,In Process,New,Future,On Hold</value>
        </filters>
        <label>Outstanding Transfer Requests</label>
    </listViews>
    <listViews>
        <fullName>Completed</fullName>
        <columns>SLX__Date_Requested__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>NAME</columns>
        <columns>Request_Type__c</columns>
        <columns>SLX__Description__c</columns>
        <columns>SLX__Results__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SLX__Request_Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <label>Completed</label>
    </listViews>
    <listViews>
        <fullName>New_Requests</fullName>
        <columns>SLX__Date_Requested__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>NAME</columns>
        <columns>Request_Type__c</columns>
        <columns>SLX__Request_Status__c</columns>
        <columns>SLX__Days_Outstanding__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SLX__Request_Status__c</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <label>New Requests</label>
    </listViews>
    <listViews>
        <fullName>SLX__AllOutstanding</fullName>
        <columns>SLX__Date_Requested__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Request_Type__c</columns>
        <columns>NAME</columns>
        <columns>SLX__Request_Status__c</columns>
        <columns>SLX__Description__c</columns>
        <columns>Priority__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>SLX__Days_Outstanding__c</columns>
        <columns>SLX__Results__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SLX__Request_Status__c</field>
            <operation>notEqual</operation>
            <value>Approved,Completed,Duplicate,Not Approved</value>
        </filters>
        <label>All Outstanding</label>
    </listViews>
    <nameField>
        <label>Change Control Request</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Changes</pluralLabel>
    <recordTypes>
        <fullName>SLX__Admin</fullName>
        <active>true</active>
        <label>Admin</label>
    </recordTypes>
    <recordTypes>
        <fullName>SLX__User</fullName>
        <active>true</active>
        <label>User</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>